[project]
name = "scale"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pyacaia>=0.4.0",
    "bleak>=2.0.0",
    "bluepy>=1.3.0",
    "google-auth-oauthlib>=1.2.3",
    "google-auth-httplib2>=0.3.0",
    "google-api-python-client>=2.187.0",
]

[project.scripts]
monitor = "monitor:run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF",
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["calsync", "calendar_api", "state_db", "sync_engine"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
include = ["monitor.py"]
